[FEATURE]: Create web module - Add LoggingAspect, AspectConfig, WebConfig, LoggingFilter, LoggingInterceptor & GlobalExceptionHandler - Add controllers for all service interface - Add new DTOs class

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.4.10</version>
+        <version>3.4.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -20,6 +20,7 @@
         <module>tour-agency-common</module>
         <module>tour-agency-repo</module>
         <module>tour-agency-service</module>
+        <module>tour-agency-web</module>
     </modules>
 
     <properties>
@@ -27,10 +28,16 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <org.mapstruct.version>1.6.2</org.mapstruct.version>
+        <mysql.version>9.1.0</mysql.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.mapstruct</groupId>
                 <artifactId>mapstruct</artifactId>
