--- a/tour-agency-web/src/main/resources/application.yaml
+++ b/tour-agency-web/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     database: MYSQL
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
@@ -23,7 +23,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID}
             client-secret: ${GOOGLE_SECRET}
-            authorization-grant-type: ${GOOGLE_AUTH_GRANT_TYPE}
+            authorization-grant-type: ${GOOGLE_AUTH_GRANT_TYPE:authorization_code}
             redirect-uri: "http://localhost:8080/v1/auth/google/callback"
         provider:
           google:
@@ -31,6 +31,10 @@ spring:
 
 jwt:
   secret: ${JWT_SECRET}
+
+auth:
+  success-redirect-url: "http://localhost:3000/login/success"
+  error-redirect-url: "http://localhost:3000/login/error"
 
 logging:
   level:
