--- a/tour-agency-web/src/main/resources/application.yaml
+++ b/tour-agency-web/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     database: MYSQL
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
@@ -33,8 +33,8 @@ jwt:
   secret: ${JWT_SECRET}
 
 auth:
-  success-redirect-url: "http://localhost:3000/login/success"
-  error-redirect-url: "http://localhost:3000/login/error"
+  success-redirect-url: "http://localhost:5173/"
+  error-redirect-url: "http://localhost:5173/login/error"
 
 logging:
   level:
